# onepwd

./: .buckconfig  .buckversion  .editorconfig  .gitignore  .project  AndroidManifest.xml  BUCK  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  Privacy.md  README.md  WORKSPACE  WORKSPACE.bzlmod  build.xml  maven_install.json  release.sh
java/: AndroidManifest.xml  BUILD
java/res/layout/: main.xml
java/res/values/: strings.xml
java/res/xml/: pref_headers.xml
java/src/com/yhsif/onepwd/: NotificationService.java  OnePwd.java  QSTileService.java  SettingsActivity.java
javatests/: BUILD
libs/: BUCK  android_extra_library.defs
py/: BUILD
res/layout/: length_dialog.xml  list.xml  list_item.xml  main.xml  settings.xml
res/mipmap-anydpi-v26/: icon_round.xml
res/values/: colors.xml  dimen.xml  strings.xml  styles.xml
res/values-v21/: styles.xml
res/xml/: backup_rules.xml  pref_about.xml  pref_bio.xml  pref_clipboard.xml  pref_headers.xml  pref_headers_no_bio.xml  pref_lengths.xml  pref_prefill.xml  pref_remember.xml  pref_service.xml
src/com/yhsif/onepwd/: AppCompatPreferenceActivity.java  BootupReceiver.java  BootupReceiver.kt  HmacMd5.java  HmacMd5.kt  LengthPreference.java  LengthPreference.kt  ListActivityBase.kt  ListAdapter.kt  ListDataBase.kt  ListDataNever.kt  ListDataPairing.kt  ListViewHolder.kt  MyApp.kt  NeverList.kt  NotificationService.java  NotificationService.kt  OnePwd.java  OnePwd.kt  PairingList.kt  QSTileService.java  QSTileService.kt  SettingsActivity.java  SiteKey.kt  SiteKeyValue.kt
src/com/yhsif/onepwd/db/: SiteKeyPairing.kt  SiteKeyPairingDao.kt  SiteKeyPairingDatabase.kt  SiteKeyPairings.kt
src/com/yhsif/onepwd/length/: LengthDialog.kt  LengthPreference.kt
src/com/yhsif/onepwd/settings/: AboutPreferenceFragment.kt  AppCompatPreferenceActivity.kt  BasePreferenceFragment.kt  BioPreferenceFragment.kt  ClipboardPreferenceFragment.kt  LengthsPreferenceFragment.kt  PrefillPreferenceFragment.kt  PrefsFragment.kt  RememberPreferenceFragment.kt  ServicePreferenceFragment.kt  SettingsActivity.kt
tests/: .classpath  .project  AndroidManifest.xml  BUCK  BUILD  BUILD.bazel  build.xml
tests/com/yhsif/onepwd/: HmacMd5Test.kt
tests/src/com/yhsif/onepwd/: HmacMd5Test.java  OnePwdTest.java
tools/: bazel.rc  release.sh
