load(
    "@io_bazel_rules_kotlin//kotlin:kotlin.bzl",
    "define_kt_toolchain",
    "kt_android_library",
    "kt_jvm_library",
)
load("@rules_android//android:rules.bzl", "android_binary")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.4",  # "1.1", "1.2", "1.3", or "1.4"
    jvm_target = "11",  # "1.6", "1.8", "9", "10", "11", "12", or "13",
    language_version = "1.4",  # "1.1", "1.2", "1.3", or "1.4"
)

PACKAGE = "com.yhsif.onepwd"

MANIFEST = "AndroidManifest.xml"

MANIFEST_VALUES = {"PACKAGE": PACKAGE}

HMAC_SRCS = ["src/com/yhsif/onepwd/HmacMd5.kt"]

kt_jvm_library(
    name = "hmac_md5",
    srcs = HMAC_SRCS,
    visibility = [
        "//tests:__pkg__",
    ],
)

android_binary(
    name = "app",
    custom_package = PACKAGE,
    manifest = MANIFEST,
    manifest_values = MANIFEST_VALUES,
    deps = [
        ":onepwd",
    ],
)

kt_android_library(
    name = "onepwd",
    srcs = glob(
        ["src/**/*.kt"],
        exclude = HMAC_SRCS,
    ),
    custom_package = PACKAGE,
    manifest = MANIFEST,
    plugins = [
        ":room_compiler",
    ],
    resource_files = glob(["res/**/*"]),
    deps = [
        ":hmac_md5",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_biometric_biometric",
        "@maven//:androidx_cardview_cardview",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_fragment_fragment_ktx",
        "@maven//:androidx_preference_preference",
        "@maven//:androidx_recyclerview_recyclerview",
        "@maven//:androidx_room_room_runtime",
        "@maven//:com_google_android_material_material",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_android",
    ],
)

java_plugin(
    name = "room_compiler",
    processor_class = "androidx.room.RoomProcessor",
    deps = [
        "@maven//:androidx_room_room_compiler",
    ],
)
