###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_kotlin", version = "2.0.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "androidx.activity:activity:1.2.4",
        "androidx.appcompat:appcompat:1.3.1",
        "androidx.biometric:biometric:1.1.0",
        "androidx.cardview:cardview:1.0.0",
        "androidx.core:core:1.12.0",
        "androidx.core:core-ktx:1.12.0",
        "androidx.fragment:fragment-ktx:1.3.6",
        "androidx.preference:preference:1.2.0",
        "androidx.recyclerview:recyclerview:1.2.1",
        "androidx.sqlite:sqlite:2.2.0",
        "androidx.sqlite:sqlite-framework:2.2.0",
        "com.google.android.material:material:1.4.0",
        "com.google.truth:truth:1.1.3",
        "junit:junit:4.13.2",
        "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3",
    ],
    fail_if_repin_required = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(
    maven,
    "maven",
)
